2010-01-15  Paul C. Mantz <pcmantz@zmanda.com>
	* perl/Amanda/Report/human.pm: changed usage of 'constant' for perl
	  5.6 compatibility

2010-01-15  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Changer_robot.pl: Typo.

2010-01-15  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: iread errfd and close it on termination.

2010-01-15  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/multi.pm, perl/Amanda/Changer/robot.pm: Add
	  update '1-4=' syntax to mark slot as being in unknown state.
	* man/xml-source/amanda-changers.7.xml: Document new syntax.
	* installcheck/Amanda_Changer_multi.pl: Test new syntax.
	* installcheck/Amanda_Changer_robot.pl: Test new syntax.

2010-01-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.c (parse_diskline): Don't set todo to 0 for
	                                          skip disk.
	* server-src/diskfile.c (disable_skip_disk): New function to set todo
	                                             to 0 for skip disk.
	* server-src/diskfile.h (disable_skip_disk): Add prototype.
	* server-src/amcheck.c, server-src/driver.c, server-src/planner.c
	  server-src/reporter.c: Call disable_skip_disk.

2010-01-14  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Makefile.am: typo.

2010-01-14  Paul C. Mantz <pcmantz@zmanda.com>
	* server-src/amreport_new.pl: amreport rewrite in perl
	* perl/Amanda/Report.pm perl/Amanda/Report/human.pm
          perl/Amanda/Report/xml.pm: factored out output formats and
	  added legacy format
	* perl/Makefile.am server-src/Makefile.am: makefile changes
	* contrib/amreport.rnc: amreport xml spec in RelaxNG

2010-01-13  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/device.c perl/Amanda/Device.pod perl/Amanda/Device.swg:
	  make device_listen and device_accept callable anywhere; be explicit
	  about conn refcount from accept
	* device-src/ndmp-device.c: don't call device_use_connection, as