@@ -92,11 +92,6 @@ $subs{'result_cb'} = make_cb(result_cb => sub {
     (my $err, $res, $label, $mode) = @_;
     return failure($err) if $err;
 
-    # try reading the label if it's not already present
-    if (!defined $res->{'device'}->volume_label()) {
-	$res->{'device'}->read_label();
-    }
-
     if (defined $res->{'device'}->volume_label()) {
 	$res->set_label(label => $res->{'device'}->volume_label(),
 			finished_cb => $subs{'set_labeled'});
